syntax = "proto3";

package org.corfudb.runtime;
option java_package = "org.corfudb.runtime.proto";

import "rpc_common.proto";
import "log_data.proto";

/**
 * Protobuf definitions for various server errors
 * sent to clients.
 */

message WrongEpochErrorMsg {
  int64 correct_epoch = 1;
}

message NotReadyErrorMsg {
}

message WrongClusterErrorMsg {
  UuidMsg expected_cluster_id = 1;
  UuidMsg provided_cluster_id = 2;
}

message TrimmedErrorMsg {
}

message OverwriteErrorMsg {
  int32 overwrite_cause_id = 1;
}

message DataCorruptionErrorMsg {
  int64 address = 1;
}

message BootstrappedErrorMsg {
}

message NotBootstrappedErrorMsg {
}

message RemoteCorfuTableErrorMsg {
  string cause = 1;
}

message UnknownErrorMsg {
  bytes throwable = 1;
}

message ServerErrorMsg {
  oneof error {
    UnknownErrorMsg unknown_error = 1;
    WrongEpochErrorMsg wrong_epoch_error = 2;
    NotReadyErrorMsg not_ready_error = 3;
    WrongClusterErrorMsg wrong_cluster_error = 4;
    TrimmedErrorMsg trimmed_error = 5;
    OverwriteErrorMsg overwrite_error = 6;
    DataCorruptionErrorMsg data_corruption_error = 7;
    BootstrappedErrorMsg bootstrapped_error = 8;
    NotBootstrappedErrorMsg not_bootstrapped_error = 9;
    RemoteCorfuTableErrorMsg remote_corfu_table_error = 10;
  }
}
